Finished, some details could be changed

--- a/projekt.html
+++ b/projekt.html
@@ -64,7 +64,7 @@
                     <ul>
                         <li class="fragment">Jasmin Bejtovic</li>
                         <li class="fragment">36 år gammal</li>
-                        <li class="fragment">Kommer från Bosnien-Hercegovina, bor i Sverige (Eslöv) sedan 2008</li>
+                        <li class="fragment">Kommer från Bosnien-Hercegovina, bor i Sverige sedan 2008</li>
                         <li class="fragment">Har examen i IT teknik från 2003</li>
                         <li class="fragment">Jobbade som professionel schackspelare</li>
                         <li class="fragment">Har erfarenhet av windows-forms programmering</li>
@@ -183,8 +183,18 @@
 				            <header>
 						    	<p>Article-taggen i HTML5</p>
 						    </header>
-						    <h3>Några exempel</h3>
+						    <h3>section nästlad i article</h3>
 						    <img class="fragment fade-in" width="360" height="300" src="images/articleplussection.png"></img>
+				        	<footer>
+								    <p><smallest><a href="https://twitter.com/Bejtovic_J">Jasmin Bejtovic</a>, Webbtekninsk introduktion 1ik415 HT14, jb223cp@student.lnu.se</smallest></p>
+							</footer>
+				        </section>
+				        <section>
+				            <header>
+						    	<p>Article-taggen i HTML5</p>
+						    </header>
+						    <h3>article nästlad i section</h3>
+						    <img class="fragment fade-in" width="360" height="300" src="images/sectionplusarticle.jpg"></img>
 				        	<footer>
 								    <p><smallest><a href="https://twitter.com/Bejtovic_J">Jasmin Bejtovic</a>, Webbtekninsk introduktion 1ik415 HT14, jb223cp@student.lnu.se</smallest></p>
 							</footer>
@@ -198,6 +208,19 @@
 				    	<p>Article-taggen i HTML5</p>
 				    </header>
 				    <h2>Attributer och tillgänlighet</h2>
+				    
+					    <ul>
+					    	<li>Google Chrome 6.0</li>
+					    	<li>Internet Explorer 9.0</li>
+					    	<li>Mozzila Firefox 4.0</li>
+					    	<li> Safari 5.0</li>
+					    	<li> Opera 11.0</li>
+					    </ul>
+					    <blockquote>
+					    <p>Article-taggen stötter alla globala attributer i HTML5</p>
+					    <p>Article-taggen stötter alla events attributer i HTML5</p>
+					    <p>Default CSS egenskap är display:block;</p>
+					    </blockquote>
 				    
 				    <footer>
 						    <p><smallest><a href="https://twitter.com/Bejtovic_J">Jasmin Bejtovic</a>, Webbtekninsk introduktion 1ik415 HT14, jb223cp@student.lnu.se</smallest></p>
